Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.22***

****	Fix SystemPerl hitting "undefined find_interface..." in 3.220.

* Verilog::Language 3.220 2009/09/30

**	Add parsing of "assign", including SigParser::contassign callback,
	Netlist::ContAssign object, and related accessors.

***	Several code speedups to vhier, Verilog::Netlist, and the parsers.

***	Add Preproc::getall to fetch all text instead of line-by-line.

***	Add Parser::new(use_cb_{name}=>0) option to speed parsing.

***	Add SigParser/Netlist::new(use_vars=>0) option to speed parsing.

****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]

****	Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]

****	Fix Preproc::defSubstitute not being called on parameterized macros.

****	Fix Perl 5.8.8 compile error, bug115. [Marek Rouchal]

* Verilog::Language 3.213 2009/09/10

***	Improved warning when "do" used as identifier.

****	Fix compilation and installation on MacOS 10.4. [Robert Guenzel]

****	Fix escaped preprocessor identifiers, bug106. [Nimrod Gileadi]

****	Fix Perl 5.8.8 compile error, bug115. [Marek Rouchal]

****	Fix Perl 5.8.0 compile error with callbackgen. [Kjeld Svendsen]

* Verilog::Language 3.212 2009/07/20

***	Fix syntax errors when using vhier/Netlist with --language 1364-2001.

****	Fix dotted expressions returning "..", bug98. [Saul Cuellar]

****	Fix Getopt::file_path to expand environment variables in filenames.

* Verilog::Language 3.211 2009/06/17

***	Add SigParser::var callbacks on struct members, bug91. [Saul Cuellar]

***	Add Preproc::defSubstitute define callbacks, bug94. [by Saul Cuellar]

****	Fix parsing empty commas in port lists, bug97.  [Noam Meir]

****	Fix compatibility with Getopt-Long-2.38, bug167.  [by Marek Rouchal]

****	Fix compile error under GCC 3.3.5.
