@@ -249,78 +249,78 @@ verilog/parser_bugs.v:266: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:268: MODULE  'module' 'bug16' undef '0'
 verilog/parser_bugs.v:271: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:273: VAR  'parameter' 'bug39' 'netlist' '' '' '' '0'
-verilog/parser_bugs.v:278: MODULE  'module' 'bug64' undef '0'
-verilog/parser_bugs.v:279: VAR  'parameter' 'a' 'module' '' 'integer' '' '1'
-verilog/parser_bugs.v:279: VAR  'parameter' 'b' 'module' '' 'integer' '' '2'
-verilog/parser_bugs.v:280: VAR  'parameter' 'c' 'module' '' 'real' '' '3.0'
-verilog/parser_bugs.v:281: VAR  'parameter' 'd' 'module' '' 'realtime' '' '4.0'
-verilog/parser_bugs.v:282: VAR  'parameter' 'e' 'module' '' 'time' '' '5.0'
-verilog/parser_bugs.v:283: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:285: MODULE  'module' 'bug166' undef '0'
-verilog/parser_bugs.v:286: CONTASSIGN  'assign' '{{o1,o2},o3,o4,{o5,o6}}' '{{i1,i2},i3,i4,{i5,i6}}'
-verilog/parser_bugs.v:287: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:289: MODULE  'module' 'coverage20090318' undef '0'
-verilog/parser_bugs.v:290: TASK  'task' 'atask'
-verilog/parser_bugs.v:292: ENDTASKFUNC  'endtask'
-verilog/parser_bugs.v:293: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:295: MODULE  'module' 'svsig' undef '0'
-verilog/parser_bugs.v:296: FUNCTION  'function' 'count' 'int'
-verilog/parser_bugs.v:296: VAR  'port' 'd' 'function' '' 'logic [3:0]' '' ''
-verilog/parser_bugs.v:296: PORT  'd' 'function' 'input' 'logic [3:0]' '' '1'
-verilog/parser_bugs.v:297: VAR  'var' 'count' 'function' '' 'int' '' 'd[0]+d[1]+d[2]+d[3]'
-verilog/parser_bugs.v:302: ENDTASKFUNC  'endfunction'
-verilog/parser_bugs.v:303: TASK  'task' 'autoconst'
-verilog/parser_bugs.v:304: VAR  'var' 'CONS' 'task' '' 'const int' '' '8'
-verilog/parser_bugs.v:307: ENDTASKFUNC  'endtask'
-verilog/parser_bugs.v:308: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:310: MODULE  'module' 'bug_empty_func_param' undef '0'
-verilog/parser_bugs.v:320: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:322: MODULE  'module' 'dotted_funcs' undef '0'
-verilog/parser_bugs.v:325: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:327: MODULE  'module' 'var_only_in_block' undef '0'
-verilog/parser_bugs.v:329: VAR  'var' 'only_a_var_in_blk' 'module' '' 'integer' '' ''
-verilog/parser_bugs.v:331: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:333: MODULE  'module' 'v2k_vec_no_vec' undef '0'
-verilog/parser_bugs.v:334: VAR  'port' 'VEC' 'module' '' '[2:0]' '' ''
-verilog/parser_bugs.v:334: PORT  'VEC' 'module' 'input' '[2:0]' '' '1'
-verilog/parser_bugs.v:335: VAR  'port' 'VEC2' 'module' '' '[2:0]' '' ''
-verilog/parser_bugs.v:335: PORT  'VEC2' 'module' 'input' '[2:0]' '' '2'
-verilog/parser_bugs.v:336: VAR  'port' 'NOVEC' 'module' '' '' '' ''
-verilog/parser_bugs.v:336: PORT  'NOVEC' 'module' 'input' '' '' '3'
-verilog/parser_bugs.v:337: VAR  'port' 'ARY' 'module' '' '' '[1:0]' ''
-verilog/parser_bugs.v:337: PORT  'ARY' 'module' 'input' '' '[1:0]' '4'
-verilog/parser_bugs.v:338: VAR  'port' 'NOARY2' 'module' '' '' '' ''
-verilog/parser_bugs.v:338: PORT  'NOARY2' 'module' 'input' '' '' '5'
-verilog/parser_bugs.v:339: VAR  'port' 'STILL_IN' 'module' '' 'logic' '' ''
-verilog/parser_bugs.v:339: PORT  'STILL_IN' 'module' 'input' 'logic' '' '6'
-verilog/parser_bugs.v:340: VAR  'port' 'TYPED' 'module' '' 'logic' '' ''
-verilog/parser_bugs.v:340: PORT  'TYPED' 'module' 'input' 'logic' '' '7'
-verilog/parser_bugs.v:342: TASK  'task' 't'
-verilog/parser_bugs.v:342: VAR  'port' 'FVEC' 'task' '' '[2:0]' '' ''
-verilog/parser_bugs.v:342: PORT  'FVEC' 'task' 'input' '[2:0]' '' '1'
-verilog/parser_bugs.v:342: VAR  'port' 'FVEC2' 'task' '' '[2:0]' '' ''
-verilog/parser_bugs.v:342: PORT  'FVEC2' 'task' 'input' '[2:0]' '' '1'
-verilog/parser_bugs.v:343: VAR  'port' 'NOVEC' 'task' '' '' '' ''
-verilog/parser_bugs.v:343: PORT  'NOVEC' 'task' 'input' '' '' '1'
-verilog/parser_bugs.v:345: ENDTASKFUNC  'endtask'
-verilog/parser_bugs.v:346: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:348: MODULE  'module' 'bugfor' undef '0'
-verilog/parser_bugs.v:350: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:352: MODULE  'module' 'bug85' undef '0'
-verilog/parser_bugs.v:352: VAR  'parameter' 'T_DATA' 'module' '' 'type' '' 'byte'
-verilog/parser_bugs.v:353: PORT  'data' 'module' '' '' '' '1'
-verilog/parser_bugs.v:354: VAR  'port' 'data' 'module' '' 'T_DATA' '' ''
-verilog/parser_bugs.v:354: PORT  'data' 'module' 'input' 'T_DATA' '' '0'
-verilog/parser_bugs.v:356: INSTANT  'sub' 'sub' ''
-verilog/parser_bugs.v:355: PARAMPIN  'T_DATA' 'T_DATA' '1'
-verilog/parser_bugs.v:356: PIN  'data' 'data' '1'
-verilog/parser_bugs.v:356: ENDCELL  ''
-verilog/parser_bugs.v:357: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:359: MODULE  'module' 'bugmodportcomma' undef '0'
-verilog/parser_bugs.v:359: PORT  'a' 'module' '' '' '' '1'
-verilog/parser_bugs.v:360: VAR  'port' 'a' 'module' '' '' '' ''
-verilog/parser_bugs.v:360: PORT  'a' 'module' 'input' '' '' '0'
-verilog/parser_bugs.v:361: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:279: MODULE  'module' 'bug64' undef '0'
+verilog/parser_bugs.v:280: VAR  'parameter' 'a' 'module' '' 'integer' '' '1'
+verilog/parser_bugs.v:280: VAR  'parameter' 'b' 'module' '' 'integer' '' '2'
+verilog/parser_bugs.v:281: VAR  'parameter' 'c' 'module' '' 'real' '' '3.0'
+verilog/parser_bugs.v:282: VAR  'parameter' 'd' 'module' '' 'realtime' '' '4.0'
+verilog/parser_bugs.v:283: VAR  'parameter' 'e' 'module' '' 'time' '' '5.0'
+verilog/parser_bugs.v:284: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:286: MODULE  'module' 'bug166' undef '0'
+verilog/parser_bugs.v:287: CONTASSIGN  'assign' '{{o1,o2},o3,o4,{o5,o6}}' '{{i1,i2},i3,i4,{i5,i6}}'
+verilog/parser_bugs.v:288: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:290: MODULE  'module' 'coverage20090318' undef '0'
+verilog/parser_bugs.v:291: TASK  'task' 'atask'
+verilog/parser_bugs.v:293: ENDTASKFUNC  'endtask'
+verilog/parser_bugs.v:294: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:296: MODULE  'module' 'svsig' undef '0'
+verilog/parser_bugs.v:297: FUNCTION  'function' 'count' 'int'
+verilog/parser_bugs.v:297: VAR  'port' 'd' 'function' '' 'logic [3:0]' '' ''
+verilog/parser_bugs.v:297: PORT  'd' 'function' 'input' 'logic [3:0]' '' '1'
+verilog/parser_bugs.v:298: VAR  'var' 'count' 'function' '' 'int' '' 'd[0]+d[1]+d[2]+d[3]'
+verilog/parser_bugs.v:303: ENDTASKFUNC  'endfunction'
+verilog/parser_bugs.v:304: TASK  'task' 'autoconst'
+verilog/parser_bugs.v:305: VAR  'var' 'CONS' 'task' '' 'const int' '' '8'
+verilog/parser_bugs.v:308: ENDTASKFUNC  'endtask'
+verilog/parser_bugs.v:309: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:311: MODULE  'module' 'bug_empty_func_param' undef '0'
+verilog/parser_bugs.v:321: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:323: MODULE  'module' 'dotted_funcs' undef '0'
+verilog/parser_bugs.v:326: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:328: MODULE  'module' 'var_only_in_block' undef '0'
+verilog/parser_bugs.v:330: VAR  'var' 'only_a_var_in_blk' 'module' '' 'integer' '' ''
+verilog/parser_bugs.v:332: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:334: MODULE  'module' 'v2k_vec_no_vec' undef '0'
+verilog/parser_bugs.v:335: VAR  'port' 'VEC' 'module' '' '[2:0]' '' ''
+verilog/parser_bugs.v:335: PORT  'VEC' 'module' 'input' '[2:0]' '' '1'
+verilog/parser_bugs.v:336: VAR  'port' 'VEC2' 'module' '' '[2:0]' '' ''
+verilog/parser_bugs.v:336: PORT  'VEC2' 'module' 'input' '[2:0]' '' '2'
+verilog/parser_bugs.v:337: VAR  'port' 'NOVEC' 'module' '' '' '' ''
+verilog/parser_bugs.v:337: PORT  'NOVEC' 'module' 'input' '' '' '3'
+verilog/parser_bugs.v:338: VAR  'port' 'ARY' 'module' '' '' '[1:0]' ''
+verilog/parser_bugs.v:338: PORT  'ARY' 'module' 'input' '' '[1:0]' '4'
+verilog/parser_bugs.v:339: VAR  'port' 'NOARY2' 'module' '' '' '' ''
+verilog/parser_bugs.v:339: PORT  'NOARY2' 'module' 'input' '' '' '5'
+verilog/parser_bugs.v:340: VAR  'port' 'STILL_IN' 'module' '' 'logic' '' ''
+verilog/parser_bugs.v:340: PORT  'STILL_IN' 'module' 'input' 'logic' '' '6'
+verilog/parser_bugs.v:341: VAR  'port' 'TYPED' 'module' '' 'logic' '' ''
+verilog/parser_bugs.v:341: PORT  'TYPED' 'module' 'input' 'logic' '' '7'
+verilog/parser_bugs.v:343: TASK  'task' 't'
+verilog/parser_bugs.v:343: VAR  'port' 'FVEC' 'task' '' '[2:0]' '' ''
+verilog/parser_bugs.v:343: PORT  'FVEC' 'task' 'input' '[2:0]' '' '1'
+verilog/parser_bugs.v:343: VAR  'port' 'FVEC2' 'task' '' '[2:0]' '' ''
+verilog/parser_bugs.v:343: PORT  'FVEC2' 'task' 'input' '[2:0]' '' '1'
+verilog/parser_bugs.v:344: VAR  'port' 'NOVEC' 'task' '' '' '' ''
+verilog/parser_bugs.v:344: PORT  'NOVEC' 'task' 'input' '' '' '1'
+verilog/parser_bugs.v:346: ENDTASKFUNC  'endtask'
+verilog/parser_bugs.v:347: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:349: MODULE  'module' 'bugfor' undef '0'
+verilog/parser_bugs.v:351: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:353: MODULE  'module' 'bug85' undef '0'
+verilog/parser_bugs.v:353: VAR  'parameter' 'T_DATA' 'module' '' 'type' '' 'byte'
+verilog/parser_bugs.v:354: PORT  'data' 'module' '' '' '' '1'
+verilog/parser_bugs.v:355: VAR  'port' 'data' 'module' '' 'T_DATA' '' ''
+verilog/parser_bugs.v:355: PORT  'data' 'module' 'input' 'T_DATA' '' '0'
+verilog/parser_bugs.v:357: INSTANT  'sub' 'sub' ''
+verilog/parser_bugs.v:356: PARAMPIN  'T_DATA' 'T_DATA' '1'
+verilog/parser_bugs.v:357: PIN  'data' 'data' '1'
+verilog/parser_bugs.v:357: ENDCELL  ''
+verilog/parser_bugs.v:358: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:360: MODULE  'module' 'bugmodportcomma' undef '0'
+verilog/parser_bugs.v:360: PORT  'a' 'module' '' '' '' '1'
+verilog/parser_bugs.v:361: VAR  'port' 'a' 'module' '' '' '' ''
+verilog/parser_bugs.v:361: PORT  'a' 'module' 'input' '' '' '0'
+verilog/parser_bugs.v:362: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
