@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix SystemPerl hitting "undefined find_interface..." in 3.220.
 
+****	Fix line number miscounting with `pragma.
+
 * Verilog::Language 3.220 2009/09/30
 
 **	Add parsing of "assign", including SigParser::contassign callback,
